# solarmask

./: .gitignore  Makefile  README.md  Untitled.ipynb  events.csv  getting_started.ipynb  hmi.sharp_cea_720s.833.20110904_130000_TAI.continuum.fits  hmi.sharp_cea_720s.833.20110904_140000_TAI.continuum.fits  install.sh  setup.cfg
docs/example_data/: labels.csv  merge.py  split.py
docs/getting_started/: getting_started.md
docs/guides/: AddingFieldParameters.ipynb  ProjectSummary.ipynb  Untitled.ipynb  Untitled1.ipynb  getting_started.ipynb  guide.ipynb  installation.ipynb
docs/segmentation_derivations/: Neutral_Line.ipynb  Umbra_Penumbra.ipynb  Untitled.ipynb
sample_features/: baseline_1449.csv  baseline_335.csv  baseline_7115.csv  segmented_1449.csv  segmented_335.csv  segmented_7115.csv  sharps_1449.csv  sharps_335.csv  sharps_7115.csv
sample_nl_compressed_data/: README.md  read_example.py
src/: Untitled.ipynb  baseline.csv  file.prof  get_data.py  graph.txt  output  process.py  read_test.py  segmented.csv  sharp_noaa.py  sharps.csv  test.py
src/.notes/: segmented.csv  sharps.csv  togif.py
src/data/: baseline.csv  segmented.csv  sharps.csv
src/flares/: .ARDataSet.py.swp  .active_region.py.swp  .data.py.swp  ARDataSet.py  README.md  __init__.py  __main__.py  active_region.py  active_region_derived_fields.py  active_region_parameters.py  active_region_segments.py  data.py  fields.py  utils.py
src/flares_segmentation_tlincke125.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
stable_builds/: flares_segmentation_tlincke125-0.0.2_stable-py3-none-any.whl
(+60 files in other folders)
