[metadata]
name = flares-segmentation-tlincke125
version = 0.0.3-wip
author = Theo Lincke
author_email = thli2739@colorado.edu
description = A solar physics segmentation and feature parameterization library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tlincke125/flares_data
project_urls = 
    Bug Tracker = https://github.com/tlincke125/flares_data/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent

[options]
install_requires = 
	torch
	scikit-image
	numpy
	networkx
	matplotlib
	astropy
	
package_dir = 
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
