[metadata]
name = solarmask
version = 1.0.2
author = Theo Lincke
author_email = thli2739@colorado.edu
description = An active region segmentation library
long_description = file: docs/getting_started/getting_started.md
long_description_content_type = text/markdown
url = https://github.com/SWxTREC/solarmask
project_urls = 
    BugTracker = https://github.com/SWxTREC/solarmask/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License 
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6
install_requires = 
	numpy
	matplotlib
	pandas
	torch
	scikit-learn
	scikit-image
	scipy
	astropy

[options.packages.find]
where = src
